--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -9,6 +9,31 @@ $btn-height: 3.6rem;
   line-height: $global-line-height;
   padding: 0.5rem 0.6rem 0.5rem 0.6rem;
 
+  &--warning {
+    background-color: rgb(var(--lia-yellow));
+    color: rgb(var(--lia-white));
+    border-color: transparent;
+  }
+
+  &--failure {
+    background-color: rgb(var(--lia-red));
+    color: rgb(var(--lia-white));
+    border-color: transparent;
+  }
+
+  &--success {
+    background-color: rgb(var(--lia-success));
+    color: rgb(var(--lia-white));
+    border-color: transparent;
+  }
+
+  &[disabled],
+  &--disabled {
+    background-color: rgb(var(--lia-grey-light));
+    border-color: rgb(var(--lia-grey));
+    color: rgb(var(--lia-grey));
+  }
+
   &--tag {
     border-radius: 0;
   }
@@ -17,18 +42,37 @@ $btn-height: 3.6rem;
     color: rgb(var(--color-highlight));
     background-color: rgb(var(--color-background));
     border: 1px solid rgb(var(--color-highlight));
+
+    &.lia-btn--warning {
+      background-color: transparent;
+      border-color: rgb(var(--lia-yellow));
+      color: rgb(var(--lia-yellow));
+    }
+
+    &.lia-btn--failure {
+      background-color: transparent;
+      border-color: rgb(var(--lia-red));
+      color: rgb(var(--lia-red));
+    }
+
+    &.lia-btn--success {
+      background-color: transparent;
+      border-color: rgb(var(--lia-success));
+      color: rgb(var(--lia-success));
+    }
+
+    &[disabled],
+    &.lia-btn--disabled {
+      background-color: transparent;
+      border-color: rgb(var(--lia-grey));
+      color: rgb(var(--lia-grey));
+    }
   }
 
   &--transparent {
     background-color: transparent;
     border: none;
     color: currentColor;
-  }
-
-  &--hint {
-    @include material-icon;
-    text-decoration: none;
-    vertical-align: middle;
   }
 
   > .lia-btn__icon {
@@ -38,32 +82,5 @@ $btn-height: 3.6rem;
 
   > .lia-btn__text {
     margin-left: 1rem;
-  }
-}
-
-@mixin style-btn($theme) {
-  .lia-btn {
-    $bg: map-get($theme, primary);
-    $fg: color-contrast($bg);
-
-    &:not([disabled]) {
-      background: $bg;
-      color: $fg;
-
-      &:hover {
-        background: mix($bg, $fg, 80%);
-      }
-    }
-
-    &--hint {
-      color: map-get($theme, text);
-    }
-
-    &[disabled] {
-      $fg: color-contrast(map-get($theme, background));
-
-      background: rgba($fg, 0.12);
-      color: rgba($fg, 0.38);
-    }
   }
 }
