--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -58,7 +58,7 @@
     display: inline-block;
 
     input {
-      background-color: rgba(var(--lia-white), 0.1);
+      background-color: rgb(var(--lia-grey-light));
       padding-left: 3rem;
       padding-right: 3.75rem;
       transition: left 250ms ease-in-out;
@@ -186,6 +186,10 @@ html:not([class*="lia-theme-default"]) {
     color: rgb(var(--lia-white));
 
     &__search {
+      input {
+        background-color: rgba(var(--lia-grey-light), 0.1);
+      }
+
       input,
       input::placeholder,
       .lia-toc__clear-index {
