--- a/src/scss/06_utilities/_utilities.text.scss
+++ b/src/scss/06_utilities/_utilities.text.scss
@@ -34,3 +34,11 @@
 .text-error {
   color: rgb(var(--lia-red));
 }
+
+.text-disabled {
+  color: rgb(var(--lia-grey));
+}
+
+.text-success {
+  color: rgb(var(--lia-success));
+}
