--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,6 +55,7 @@
 @import "05_components/components.slide-animation";
 @import "05_components/components.slide";
 @import "05_components/components.support-menu";
+@import "05_components/components.survey-matrix";
 @import "05_components/components.toc";
 @import "05_components/components.tooltip";
 
