--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -128,8 +128,7 @@ $slide-margin-left-textbook: 19rem !default;
 
     @include breakpoint("lg") {
       .lia-slide__content {
-        margin-left: $slide-margin-left-presentation;
-        padding-left: 0;
+        margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
       }
     }
   }
