--- a/src/scss/05_components/_components.quiz.scss
+++ b/src/scss/05_components/_components.quiz.scss
@@ -1,13 +1,93 @@
 .lia-quiz {
-    margin-top: map-get($global-spacing, spacing-large);
-    margin-bottom: map-get($global-spacing, spacing-large);
-    border: 3px solid;
-    padding: 10px;
-    border-radius: 10px;
+  &__answers {
+    display: flex;
+    flex-direction: column;
+
+    > *:not(:last-child) {
+      margin-bottom: 1rem;
+    }
   }
 
-@mixin style-quiz($theme) {
-    .lia-quiz {
-        border-color: map-get($theme, primary);
-      }
+  &__control {
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+
+    > *:not(:last-child) {
+      margin-right: 1rem;
+    }
+
+    @include breakpoint("md") {
+      grid-column-start: 2;
+    }
+  }
+
+  &__input {
+    border: 1px solid rgb(var(--color-highlight));
+    width: 100%;
+  }
+
+  &__check {
+    flex-shrink: 0;
+  }
+
+  &__resolve,
+  &__hint {
+    color: rgb(var(--color-highlight));
+    font-size: 3rem;
+    line-height: 1;
+    padding: 0;
+  }
+
+  &__hints,
+  &__solution {
+    grid-column-start: 1;
+  }
+
+  &__feedback {
+    display: flex;
+    align-items: center;
+  }
+
+  &-text {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr;
+
+    @include breakpoint("md") {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  &-single-choice {
+    display: flex;
+  }
+
+  &-single-choice,
+  &-multiple-choice {
+    flex-direction: column;
+
+    > *:not(:last-child) {
+      margin-bottom: 2rem;
+    }
+  }
+
+  &-matrix {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    > .lia-quiz__answers {
+      width: 100%;
+    }
+
+    > .lia-quiz__control {
+      margin-right: 1rem;
+    }
+  }
+
+  // make sure that any kind of list has no indenting
+  [class^="lia-list"] {
+    margin-left: 0;
+  }
 }
