[T001TULIA-14] #CHANGE 'scope: FE' <T001TULIA-30>
theming

--- a/src/scss/00_settings/_settings.typography.scss
+++ b/src/scss/00_settings/_settings.typography.scss
@@ -3,10 +3,11 @@ html {
 }
 
 body {
+  background-color: rgb(var(--color-background));
+  color: rgb(var(--color-text));
   font-size: $global-font-size;
   font-weight: 400;
   line-height: $global-line-height;
-  color: rgb(var(--color-text));
 }
 
 body,
