--- a/src/scss/03_elements/_elements.headline.scss
+++ b/src/scss/03_elements/_elements.headline.scss
@@ -41,6 +41,10 @@ h1 {
 
   @include breakpoint("md") {
     font-size: $h1-desktop-presentation;
+
+    @at-root .lia-mode--textbook & {
+      font-size: $h1-desktop-textbook;
+    }
   }
 }
 
