--- a/src/scss/05_components/_components.header.scss
+++ b/src/scss/05_components/_components.header.scss
@@ -3,7 +3,7 @@ $header-height-mobile: 5.6rem;
 
 .lia-header {
   align-items: center;
-  background-color: white;
+  background-color: rgb(var(--color-background));
   border-bottom: $global-border;
   display: flex;
   flex-direction: row;
