--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -9,6 +9,10 @@
   padding: 2rem;
   width: 100%;
 
+  @at-root html.lia-variant-dark & {
+    background-color: rgb(var(--lia-anthracite));
+  }
+
   @include breakpoint("sm") {
     align-items: center;
     height: 7rem;
