--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -1,5 +1,5 @@
 .lia-toc {
-  background-color: white;
+  background-color: rgb(var(--color-background));
   border-right: $global-border;
   display: flex;
   flex-direction: column;
