--- a/src/scss/03_elements/_elements.table.scss
+++ b/src/scss/03_elements/_elements.table.scss
@@ -91,7 +91,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: white;
+            background-color: rgb(var(--color-background));
             height: 100%;
           }
 
@@ -136,7 +136,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: white;
+            background-color: rgb(var(--color-background));
             height: 100%;
           }
 
@@ -160,7 +160,7 @@
     border-bottom: $global-border;
 
     th {
-      background: white;
+      background-color: rgb(var(--color-background));
     }
   }
 
