--- a/src/scss/05_components/_components.notes.scss
+++ b/src/scss/05_components/_components.notes.scss
@@ -1,14 +1,17 @@
 .lia-notes {
+  background-color: rgb(var(--lia-grey-light));
   display: flex;
   flex-direction: column;
-  max-height: 14.2rem;
   height: 100%;
+  max-height: 14.2rem;
   max-width: 144rem;
   overflow: hidden auto;
   position: relative;
   width: $notes-width-mobile;
 
-  background-color: rgb(var(--lia-grey-light));
+  @at-root html.lia-variant-dark & {
+    background-color: rgb(var(--lia-anthracite));
+  }
 
   @include breakpoint("sm") {
     height: calc(14.2rem - 7rem);
@@ -29,6 +32,10 @@
   &__content {
     background-color: rgb(var(--lia-grey-light));
     padding: 0 2.3rem 2.3rem;
+
+    @at-root html.lia-variant-dark & {
+      background-color: rgb(var(--lia-anthracite));
+    }
 
     @include breakpoint("lg") {
       padding-top: 2.3rem;
