--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,3 +66,6 @@
 @import "06_utilities/utilities.hidden";
 @import "06_utilities/utilities.spacings";
 @import "06_utilities/utilities.text";
+
+// Dump
+@import "./dump.scss";
