--- a/src/scss/03_elements/_elements.text.scss
+++ b/src/scss/03_elements/_elements.text.scss
@@ -2,3 +2,13 @@ b,
 strong {
   font-weight: 600;
 }
+
+.lia-paragraph {
+  display: inline-block;
+
+  figure {
+    max-width: 50%;
+    float: left;
+    margin: 0 2rem 2rem 0;
+  }
+}
