--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -1,3 +1,5 @@
+$responsive-voice-hight: 7rem;
+
 .lia-responsive-voice {
   align-items: flex-start;
   background-color: rgb(var(--lia-grey-light));
