--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -181,6 +181,16 @@
 /* Theming */
 
 html:not([class*="lia-theme-default"]) {
+  .lia-toc--visible {
+    #lia-btn-toc {
+      color: rgb(var(--lia-white));
+
+      @include breakpoint("sm") {
+        color: rgb(var(--color-highlight));
+      }
+    }
+  }
+
   .lia-toc {
     background-color: rgb(var(--color-highlight));
     color: rgb(var(--lia-white));
