--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 @import "03_elements/elements.button";
 @import "03_elements/elements.code";
 @import "03_elements/elements.headline";
+@import "03_elements/elements.hr";
 @import "03_elements/elements.input";
 @import "03_elements/elements.label";
 @import "03_elements/elements.link";
