--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -2,10 +2,11 @@ $btn-min-width: 3.6rem;
 $btn-height: 3.6rem;
 
 .lia-btn {
+  align-items: center;
   background-color: rgb(var(--color-highlight));
   border: none;
   color: rgb(var(--color-text));
-  display: inline-block;
+  display: inline-flex;
   line-height: $global-line-height;
   padding: 0.5rem 0.6rem 0.5rem 0.6rem;
 
