--- a/src/scss/05_components/_components.dropdown.scss
+++ b/src/scss/05_components/_components.dropdown.scss
@@ -1,42 +1,45 @@
 .lia-dropdown {
-  padding: map-get($global-spacing, spacing-small);
-  border-radius: 2px;
-  min-width: 70px;
+  border: 1px solid rgb(var(--color-highlight));
   display: inline-block;
   cursor: pointer;
-  border-width: 0.5px;
-  border-style: solid;
+  overflow: hidden;
 
-  &-options {
-    position: absolute;
-    overflow: auto;
-    transition: all 0.1s ease 0s;
-    cursor: pointer;
-    border-radius: 2px;
-    z-index: 1;
-  }
+  &__selected {
+    display: flex;
+    align-items: center;
 
-  &-option {
-    padding: map-get($global-spacing, spacing-small);
-    min-width: 70px;
-    border-width: 0.5px;
-    border-style: solid;
-  }
-}
-
-@mixin style-dropdown($theme) {
-  .lia-dropdown {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    border-color: map-get($theme, primary);
-
-    &-options {
-      border-radius: 2px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    span {
+      margin-right: auto;
     }
 
-    &-option {
-      border-color: map-get($theme, primary);
-      background-color: map-get($theme, background);
+    .icon {
+      font-size: 2rem;
+      margin-left: 2rem;
     }
+  }
+
+  &__options {
+    overflow-y: auto;
+    max-height: 0;
+
+    &.is-visible {
+      max-height: 20rem;
+    }
+  }
+
+  &__option {
+    padding: 0.5rem 1rem;
+
+    &:first-child {
+      margin-top: 1rem;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &.is-disabled {
+    border-color: rgb(var(--lia-grey));
   }
 }
