--- a/src/scss/05_components/_components.gallery.scss
+++ b/src/scss/05_components/_components.gallery.scss
@@ -1,11 +1,28 @@
 .lia-gallery {
+  display: flex;
+  margin-bottom: 2rem;
   overflow-x: auto;
   overflow-y: hidden;
+  scroll-snap-type: x mandatory;
   width: 100%;
-  display: flex;
-  scroll-snap-type: block;
+
+  .lia-figure {
+    flex: 0 0 32.2rem;
+    scroll-snap-align: start;
+
+    &__media {
+      width: 32.2rem;
+      height: 32.2rem;
+
+      img {
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
+      }
+    }
+  }
 
   > * {
-    margin-right: 1rem;
+    margin-right: 3.2rem;
   }
 }
