--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -26,8 +26,7 @@
 
   &__content {
     height: 100%;
-    margin-top: calc(#{$header-height-mobile} + 3rem);
-    margin-bottom: 2rem;
+    margin-top: calc(#{$header-height-mobile});
     max-width: 144rem;
     overflow: hidden auto;
     padding: 0 3rem;
@@ -35,7 +34,7 @@
     width: 100%;
 
     @include breakpoint("md") {
-      margin-top: calc(#{$header-height-desktop} + 3rem);
+      margin: calc(#{$header-height-desktop}) 0 2rem;
     }
   }
 }
