--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -138,7 +138,7 @@
 
   &__submenu {
     align-items: flex-start;
-    background-color: rgb(var(--lia-white));
+    background-color: rgb(var(--color-background));
     box-shadow: none;
     color: rgb(var(--color-text));
     display: flex;
