fix: button and list

--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -5,7 +5,7 @@ $btn-height: 3.6rem;
   align-items: center;
   background-color: rgb(var(--color-highlight));
   border: none;
-  color: rgb(var(--color-text));
+  color: rgb(var(--lia-white));
   display: inline-flex;
   line-height: $global-line-height;
   padding: 0.5rem 0.6rem 0.5rem 0.6rem;
