--- a/src/scss/06_utilities/_utilities.spacings.scss
+++ b/src/scss/06_utilities/_utilities.spacings.scss
@@ -3,6 +3,9 @@
    -------------------------------------------------- */
 
 @for $i from 0 to 8 {
+  .m-#{$i} {
+    margin: #{$i}rem;
+  }
   .mt-#{$i} {
     margin-top: #{$i}rem;
   }
@@ -30,6 +33,9 @@
    -------------------------------------------------- */
 
 @for $i from 0 to 8 {
+  .p-#{$i} {
+    padding: #{$i}rem;
+  }
   .pt-#{$i} {
     padding-top: #{$i}rem;
   }
